--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PERSIST_DIRECTORY=db
 MODEL_TYPE=LlamaCpp
-MODEL_PATH=models/ggml-gpt4all-j-v1.3-groovy.bin
+MODEL_PATH=models/ggml-vic7b-uncensored-q5_1
 EMBEDDINGS_MODEL_NAME=all-MiniLM-L6-v2
 MODEL_N_CTX=1000
 MODEL_N_BATCH=8
